--- a/collection_style.css
+++ b/collection_style.css
@@ -1,20 +1,23 @@
-/* CSS file for Collections App */
+/* CSS file for Collections App - use rems or something with font sizes */
 
 * {
     box-sizing: border-box;
 }
 
 body {
+    font-size: 62.5%;
     padding: 0;
     margin: 0;
     background-color: #2A546E ;
-    font-family: Verdana;
-    font-size: 90%;
+    font-family: Verdana, sans-serif;
 }
 
-header {
-    text-align: center;
-    font-size: 120%;
+p {
+    font-size:1rem;
+}
+
+li {
+    font-size:1rem;
 }
 
 .layout__collections {
@@ -45,24 +48,26 @@ h1 {
     background-color: #571867;
     vertical-align: middle;
     padding: 20px;
-    font-size: 250%;
+    font-size: 2rem;
     font-family:'Monotype Corsiva','Apple Chancery','ITC Zapf Chancery','URW Chancery L',cursive;
     text-align: center;
 }
-
+h2{
+    font-size: 1.2rem;
+}
 .layout__add-items {
     width: 50%;
     padding:20px;
     margin: 20px;
     text-align: center;
-    border: 2px solid black;
-    background-color: gray;
+    background-color: #A9A9A9;
+    border: 2px solid #000000;
 }
 
 footer {
     text-align: center;
-    padding: 20px ;
-    font-size: 80%;
+    padding: 20px;
+    font-size: 0.5rem;
     background-color: #571867;
     color: #FFFFFF;
 }
