adjusted css so vardump text is easier to read

--- a/collection_style.css
+++ b/collection_style.css
@@ -5,7 +5,9 @@
 }
 
 body {
-    font-size: 62.5%;
+    /*changed so i can see error msg & vardump for now */
+    font-size: 100%;
+    /*font-size: 62.5%;*/
     padding: 0;
     margin: 0;
     background-color: #2A546E ;
